--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "prettier": "^1.11.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "2.0.0-next.b2fd8db8"
@@ -11,6 +12,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "format": "prettier --trailing-comma es5 --single-quote --write 'src/**/*.js'",
+    "lint": "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern build .",
     "eject": "react-scripts eject"
   },
   "browserslist": {
