--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "prettier": "^1.11.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "2.0.0-next.b2fd8db8"
+  },
+  "devDependencies": {
+    "prettier": "^1.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
